初始化项目，升级springboot3.0和jdk21